style(icon, link): fix fallback icon font color, align link text

--- a/src/components/calcite-icon/calcite-icon.scss
+++ b/src/components/calcite-icon/calcite-icon.scss
@@ -1,5 +1,6 @@
 :host {
-  @apply inline-flex text-color-3;
+  @apply inline-flex;
+  color: var(inherit, --calcite-ui-text-3);
 }
 
 :host([scale="s"]) {
